--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap');
 
 /* GENERAL */
 *{
@@ -139,10 +139,6 @@ a{
     color: var(--others-purple);
 }
 
-/* .abt-left-presentation, .job-position, .abt-btn-contact{
-    border: 1px solid red;
-} */
-
 .abt-left-presentation{
     height: 100%;
     width: 85%;
@@ -198,7 +194,84 @@ h1{
 }
 
 /* about right */
+/* .about-right, .abt-r-person-img{
+    border: 1px solid red;
+} */
+
 .about-right{
     height: 100%;
     width: 50%;
+
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.abt-r-person-img{
+    height: 100%;
+    width: 70%;
+
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.image1{
+    height: 100%;
+    width: 100%;
+
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.image2 {
+    height: 70%;
+    width: 70%;
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border: 1px green solid;
+  }
+
+/* SCROLL DOWN */
+.scroll-down, .sd-empty, .sd-scroll{
+    border: 1px solid red;
+}
+
+.scroll-down{
+    height: 50px;
+    width: 50%;
+
+    margin-top: 5em;
+
+    display: flex;
+    align-items: start;
+    justify-content: center;
+}
+
+.sd-empty{
+    height: 100%;
+    width: 15%;
+}
+
+.sd-scroll{
+    height: 100%;
+    width: 85%;
+
+    padding-left: 40px;
+
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.sd-scroll p{
+    margin: 0 0.5em;
+    font-weight: 500;
+}
+
+.sd-scroll div i{
+    color: var(--others-purple);
 }
