--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h1{
 }
 
 h2{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
 }
 
@@ -43,6 +43,23 @@ p{
 a{
     color: var(--title-black);
     text-decoration: none;
+}
+
+button{
+    height: 46px;
+    width: 140px;
+    size: 20px;
+
+    border-radius: 8px;
+    border-color: var(--others-purple);
+    border: none;
+
+    color: white;
+    background-color: var(--others-purple);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -178,22 +195,7 @@ a{
 }
 
 .hm-btn-contact{
-    height: 46px;
-    width: 140px;
-    size: 20px;
-
-    border-radius: 8px;
-    border-color: var(--others-purple);
-    border: none;
-
-    color: white;
-    background-color: var(--others-purple);
-
     margin-top: 2.5em;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .hm-btn-contact i{
@@ -292,14 +294,14 @@ a{
 } */
 
 .about{
-    height: 600px;
+    height: 550px;
     width: 100%;
 
-    padding: 3em 0;
+    /* padding: 3em 0; */
 }
 
 .about-up{
-    height: 30%;
+    height: 20%;
     width: 100%;
 }
 
@@ -309,15 +311,23 @@ a{
     justify-content: center;
     align-items: center;
 }
+
+.abt-up-title h2 a{
+    text-decoration: none;
+    border: none;
+}
+
 .abt-up-title p{
     margin-top: 0.5em;
     color: var(--text-gray-weight);
 }
 
-
-.about-down, .abt-down-left, .abt-down-right{
+/* .about-down, .abt-down-left, .abt-down-right,
+.abt-dr-1, .abt-dr-2, .abt-dr-3, .abtdr2-left, .abtdr2-right,
+.abtdr2-l-numbers{
     border: 1px solid red;
-}
+} */
+
 .about-down{
     height: 70%;
     width: 100%;
@@ -338,7 +348,7 @@ a{
 
 .abt-down-left img{
     height: 300px;
-    width: 350px;
+    width: 380px;
 
     border-radius: 5px;
 }
@@ -346,4 +356,93 @@ a{
 .abt-down-right{
     height: 100%;
     width: 50%;
+}
+
+.abt-dr-1{
+    height: 40%;
+    width: 80%;
+}
+
+.abt-dr-2{
+    height: 40%;
+    width: 100%;
+
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.abtdr2-left{
+    height: 80%;
+    width: 80%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.abtdr2-l-numbers{
+    height: 100%;
+    width: 28%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.number{
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.number-description{
+    text-align: center;
+    color: var(--text-gray-weight);
+}
+
+.abtdr2-right{
+    height: 80%;
+    width: 20%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.abtdr2-right a i{
+    color: var(--others-purple);
+}
+
+.abt-dr-3{
+    height: 20%;
+    width: 100%;
+
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.hm-btn-contact{
+    height: 46px;
+    width: 140px;
+    size: 20px;
+
+    border-radius: 8px;
+    border-color: var(--others-purple);
+    border: none;
+
+    color: white;
+    background-color: var(--others-purple);
+
+    margin-top: 2.5em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.abt-btn-download i{
+    color: white;
+    padding-left: 0.5em;
 }
