--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
     --text-gray : #D8D7DE;
     --text-gray-weight : #AFAEB7;
     --others-purple : #6C55E0;
+    --purple-light : #C4BAF8;
 }
 
 body{
@@ -26,13 +27,21 @@ body{
 }
 
 h1{
+    font-family: 'Poppins', sans-serif;
     font-size: 35px;
     font-weight: 700;
 }
 
 h2{
+    font-family: 'Poppins', sans-serif;
     font-size: 30px;
     font-weight: 700;
+}
+
+h3{
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 p{
@@ -41,6 +50,7 @@ p{
 }
 
 a{
+    font-family: 'Poppins', sans-serif;
     color: var(--title-black);
     text-decoration: none;
 }
@@ -60,6 +70,10 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+i{
+    color: var(--others-purple);
 }
 
 .container {
@@ -114,6 +128,7 @@ button{
 
 .nav-feature i{
     transform: rotate(-30deg);
+    color: black;
 }
 
 #home-init a{
@@ -296,12 +311,10 @@ button{
 .about{
     height: 550px;
     width: 100%;
-
-    /* padding: 3em 0; */
 }
 
 .about-up{
-    height: 20%;
+    height: 100px;
     width: 100%;
 }
 
@@ -410,8 +423,19 @@ button{
     align-items: center;
 }
 
-.abtdr2-right a i{
-    color: var(--others-purple);
+.abtdr2-right div{
+    width: 30px;
+    height: 30px;
+
+    background-color: var(--others-purple);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.abtdr2-right div a i{
+    color: var(--background-white);
 }
 
 .abt-dr-3{
@@ -431,4 +455,269 @@ button{
 .abt-btn-download i{
     color: white;
     padding-left: 0.5em;
+}
+
+
+
+/* SKILLS  */
+/* .skills, .skills-up, .skills-down, .sk-d-frames,
+.frames-title, .frames-skills, .frames-title-icon,
+.frames-title-description, .ft-des-left, .ft-des-right,
+.frames-skills-enum{
+    border: 1px solid red;
+} */
+
+.skills{
+    height: 750px;
+    width: 100%;
+
+    margin-top: 3.5em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.skills-up{
+    height: 100px;
+    width: 100%;
+}
+
+.skills-down{
+    height: 100%;
+    width: 70%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sk-d-frames{
+    width: 48%;
+    height: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.frames-title{
+    height: 20%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.frames-title-icon{
+    width: 15%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.frames-title-icon i{
+    color: var(--others-purple);
+}
+
+
+.frames-title-description{
+    width: 85%;
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ft-des-left{
+    width: 80%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+/* .ft-des-left .ft-title{
+    font-size: 18px;
+    font-weight: 600;
+} */
+
+.ft-des-left .ft-years{
+    font-size: 14px;
+    color: var(--text-gray-weight);
+}
+
+.ft-des-right{
+    width: 20%;
+    height: 100%;
+
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+
+
+/* .frames-skills-empty, .frames-skills-enum, .f-s-e-up, .f-s-e-down{
+    border: 1px solid red;
+} */
+
+.frames-skills{
+    height: 80%;
+    width: 100%;
+
+    margin-top: 1em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.frames-skills-empty{
+    width: 15%;
+    height: 100%;
+}
+
+.frames-skills-enums{
+    width: 85%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.frames-skills-enum{
+    height: 22%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.f-s-e-up{
+    width: 100%;
+    height: 50%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.f-s-e-down{
+    width: 100%;
+    height: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.progress-bar {
+    background-color: var(--purple-light);
+    width: 100%;
+    height: 5px;
+    border-radius: 15px;
+}
+
+.pg {
+    background-color: var(--others-purple);
+    width: 100%;
+    height: 5px;
+    border-radius: 15px;
+}
+
+.pg-bar-GIS {
+    width: 82%;
+}
+
+.pg-bar-RS {
+    width: 80%;
+}
+
+.pg-bar-SAR {
+    width: 70%;
+}
+
+.pg-bar-FA {
+    width: 55%;
+}
+
+.pg-bar-ML {
+    width: 80%;
+}
+
+.pg-bar-A {
+    width: 85%;
+}
+
+.pg-bar-DP {
+    width: 65%;
+}
+
+.pg-bar-MLE {
+    width: 70%;
+}
+
+.pg-bar-FE {
+    width: 60%;
+}
+
+.pg-bar-BP {
+    width: 75%;
+}
+
+.pg-bar-AD {
+    width: 70%;
+}
+
+.pg-bar-CICD {
+    width: 20%;
+}
+
+
+/* QUALIFICATION */
+.qualification, .quali-up, .quali-down{
+    border: 1px solid red;
+}
+
+.qualification{
+    height: 900px;
+    width: 100%;
+
+    margin-top: 3.5em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.quali-up{
+    height: 100px;
+    width: 100%;
+}
+
+.quali-down{
+    height: 80%;
+    width: 50%;
+
+    margin-top: 1em;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
