--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,12 +372,12 @@ i{
 }
 
 .abt-dr-1{
-    height: 40%;
+    height: 30%;
     width: 80%;
 }
 
 .abt-dr-2{
-    height: 40%;
+    height: 45%;
     width: 100%;
 
     display: flex;
@@ -401,7 +401,7 @@ i{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .number{
@@ -410,7 +410,8 @@ i{
 }
 
 .number-description{
-    text-align: center;
+    width: 60%;
+    text-align: start;
     color: var(--text-gray-weight);
 }
 
@@ -689,12 +690,14 @@ i{
 
 
 /* QUALIFICATION */
-.qualification, .quali-up, .quali-down{
+/* .qualification, .quali-up, .quali-down,
+.q-d-title, .q-d-description, .q-d-t-type,
+.qdd-text{
     border: 1px solid red;
-}
+} */
 
 .qualification{
-    height: 900px;
+    height: 500px;
     width: 100%;
 
     margin-top: 3.5em;
@@ -710,14 +713,86 @@ i{
     width: 100%;
 }
 
+
 .quali-down{
     height: 80%;
     width: 50%;
 
-    margin-top: 1em;
+    /* margin-top: 2em; */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.q-d-title{
+    height: 20%;
+    width: 70%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.q-d-t-type{
+    height: 100%;
+    width: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.q-d-t-type h3{
+    margin-left: 1em;
+    color: var(--others-purple);
+}
+
+
+
+.q-d-description{
+    height: 80%;
+    width: 75%;
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+}
+
+.qdd-text{
+    height: 50%;
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    padding-left: 3em;
+}
+
+.qdd-text-l{
+    border-right: 2px solid var(--others-purple);
+}
+
+.qdd-text-title{
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.qdd-text-school{
+    margin-top: 3px;
+    color: var(--text-gray-weight);
+}
+
+.qdd-text-period{
+    margin-top: 20px;
+    color: var(--text-gray-weight);
+}
+
+.qdd-text-period i{
+    margin-right: 8px;
+    color: var(--text-gray-weight);
 }
