--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,28 +77,39 @@ i{
 }
 
 .container {
-    margin: 1rem 200px 1rem 200px;
+    width: 100%;
+    padding: 1rem 200px 1rem 200px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
 /* NAV BAR */
-/* .nav-bar, .nav-bar-left, .nav-bar-right, .name{
+/* .container, .nav-bar, .nav-bar-left, .nav-bar-right, .name,
+.nav-features{
     border: 1px solid red;
 } */
 
 .nav-bar{
+    background-color: var(--background-white);
     height: 50px;
-
+    width: 100%;
     font-weight: 500;
 
+    position: fixed;
+    top: 0;
+    padding: 1rem 200px 1rem 200px;
+
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
 .nav-bar-left{
     height: 100%;
-    width: 40%;
+    width: 50%;
 
     display: flex;
     justify-content: start;
@@ -106,6 +117,7 @@ i{
 }
 
 .name {
+    width: 100%;
     height: 80%;
 
     display: flex;
@@ -115,10 +127,12 @@ i{
 
 .nav-bar-right{
     height: 100%;
-    width: 60%;
+    width: 50%;
+
+    /* margin-right: 200px; */
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -420,7 +434,7 @@ i{
     width: 20%;
 
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
 }
 
@@ -718,7 +732,7 @@ i{
 
 .quali-down{
     height: 80%;
-    width: 50%;
+    width: 60%;
 
     /* margin-top: 2em; */
 
@@ -733,7 +747,7 @@ i{
     width: 70%;
 
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
@@ -742,7 +756,7 @@ i{
     width: 50%;
 
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
@@ -763,10 +777,14 @@ i{
     color: var(--others-purple)
 }
 
+.work{
+    text-align: start;
+    padding-left: 2em;
+}
 
 .q-d-description{
     height: 80%;
-    width: 75%;
+    width: 70%;
 
     display: flex;
     flex-wrap: wrap;
@@ -783,11 +801,16 @@ i{
     justify-content: center;
     align-items: flex-start;
 
-    padding-left: 3em;
+    /* padding-left: 3em; */
 }
 
 .qdd-text-l{
     border-right: 2px solid var(--others-purple);
+    /* padding-left: 3em; */
+}
+
+.qdd-text-r{
+    padding-left: 2em;
 }
 
 .qdd-text-title{
