--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ body{
     background-color: var(--background-white);
 }
 
+section {
+    padding-top: 5rem;
+}
+
 h1{
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
@@ -525,20 +529,20 @@ i{
 }
 
 .skills-down{
-    height: 100%;
+    height: 650px;
     width: 70%;
 
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 
     margin-top: 2em;
 }
 
 .sk-d-frames{
     width: 48%;
-    height: 50%;
+    height: 325px;
 
     display: flex;
     flex-direction: column;
